# ToolBoxCpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/toolbox/: FileSystem.h
include/toolbox/utils/: FileSystem.h  Logging.h  Macro.h
src/: CMakeLists.txt
src/utils/: CMakeLists.txt  FileSystem.cpp  Logging.cpp
